--- a/Portfolio.css
+++ b/Portfolio.css
@@ -26,6 +26,19 @@
     font-weight: bold;
 }
 
+#photos {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+
+
+}
+
+.gall {
+    width: 20%;
+    margin: 2.2%;
+}
+
 .container a {
     color:white;
     text-decoration: overline underline;
