--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,3 +1,6 @@
+body {
+    font-family: "Ubuntu";
+}
 .me {
     height:500px;
     border-radius: 35px;
@@ -19,6 +22,7 @@
     font-size: 25px;
     padding-left: 15px;
     text-decoration: none;
+    letter-spacing: 2px;
 }
 
 #name a:hover {
@@ -43,7 +47,8 @@
     color:white;
     text-decoration: overline underline;
     font-size: 17px;
-    font-family: "helvetica";
+    font-family: "Ubuntu";
+    font-weight: bold;
 }
 
 .container a:hover {
